--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.10.0",
     "dotenv": "^16.6.0",
     "lottie-react": "^2.4.1",
-    "next": "15.1.1",
+    "next": "^16.1.6",
     "nodemailer": "^6.10.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
